--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "codemirror-editor-vue3": "^2.8.0",
     "eslint": "^9.32.0",
     "nuxt": "^4.0.1",
+    "pdfobject": "^2.3.1",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "prettier": "^3.6.2",
@@ -34,6 +35,7 @@
   },
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
   "devDependencies": {
+    "@types/pdfobject": "^2.2.5",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
