--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "report-make-template",
   "private": true,
   "type": "module",
   "scripts": {
@@ -34,6 +34,15 @@
     "vue-router": "^4.5.1"
   },
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
+  "license": "MIT",
+  "author": {
+    "name": "seavan-ning",
+    "email": "seavan093@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seavan-ning/report-make-template"
+  },
   "devDependencies": {
     "@types/pdfobject": "^2.2.5",
     "vite-tsconfig-paths": "^5.1.4"
